--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,21 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Discover movies and TV shows with FlixRadar" />
-  <title>FlixRadar - Movie & TV Discovery</title>
+  <meta name="theme-color" content="#111827" />
+  <meta name="description" content="FlixRadar - Discover, Watch, and Rate Movies & TV Shows" />
+  <title>FlixRadar - Movie Discovery App</title>
+  <script type="text/javascript">
+    (function(l) {
+      if (l.search[1] === '/' ) {
+        var decoded = l.search.slice(1).split('&').map(function(s) { 
+          return s.replace(/~and~/g, '&')
+        }).join('?');
+        window.history.replaceState(null, null,
+            l.pathname.slice(0, -1) + decoded + l.hash
+        );
+      }
+    }(window.location))
+  </script>
 </head>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
